Add package details

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "scripts": {
      
     },
-    "author": "",
-    "license": "",
+    "author": "Joe Bailey-Roberts (https://jbr.digital)",
+    "license": "MIT",
     "dependencies": {
      
     },
