--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
 {
-    "name": "@sephsekla/picture-cover",
-    "version": "1.0.0",
-    "description": "A quick scss mixin for a background-size cover effect using a picture (so WebP support!)",
-    "repository": "https://github.com/Sephsekla/picture-cover.git",
-    "main": "mixin.scss",
-    "scripts": {
-     
-    },
-    "author": "Joe Bailey-Roberts (https://jbr.digital)",
-    "license": "MIT",
-    "dependencies": {
-     
-    },
-    "devDependencies": {
-    
-    }
-  }
-  
+ "name": "@sephsekla/picture-cover",
+ "version": "1.1.0",
+ "description": "A quick scss mixin for a background-size cover effect using a picture (so WebP support!)",
+ "repository": "https://github.com/Sephsekla/picture-cover.git",
+ "main": "mixin.scss",
+ "scripts": {},
+ "author": "Joe Bailey-Roberts (https://jbr.digital)",
+ "license": "MIT",
+ "dependencies": {},
+ "devDependencies": {}
+}
