Change to only use image inside picture

--- a/package.json
+++ b/package.json
@@ -6,7 +6,5 @@
  "main": "mixin.scss",
  "scripts": {},
  "author": "Joe Bailey-Roberts (https://jbr.digital)",
- "license": "MIT",
- "dependencies": {},
- "devDependencies": {}
+ "license": "MIT"
 }
